community/qt5-qtdeclarative: disable on armhf
It is broken currently (and probably forever), upstream bug report
https://bugreports.qt.io/browse/QTBUG-65246

Disable armhf for all packages that depend on qt5-qtdeclarative in one
way or another

--- a/community/bluez-qt/APKBUILD
+++ b/community/bluez-qt/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=bluez-qt
 pkgver=5.65.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 pkgdesc="Qt wrapper for Bluez 5 DBus API"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
