--- a/community/calindori/APKBUILD
+++ b/community/calindori/APKBUILD
@@ -4,7 +4,7 @@ pkgname=calindori
 pkgver=1.0
 pkgrel=0
 pkgdesc="Calendar for Plasma Mobile"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://invent.kde.org/kde/calindori"
 license="GPL-2.0-or-later"
 depends="qt5-qtquickcontrols2 kirigami2"
