--- a/community/falkon/APKBUILD
+++ b/community/falkon/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.1.0
 pkgrel=1
 pkgdesc="Cross-platform Qt Web Browser"
 url="https://github.com/KDE/falkon"
-arch="all !ppc64le !s390x" # Limited by qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by qt5-qtdeclarative
 license="GPL-3.0-or-later"
 depends="qt5-qtbase-sqlite"
 makedepends="cmake python3 qt5-qtbase-dev extra-cmake-modules qt5-qtdeclarative-dev
