--- a/community/gns3-gui/APKBUILD
+++ b/community/gns3-gui/APKBUILD
@@ -5,14 +5,13 @@ pkgver=2.2.3
 pkgrel=1
 pkgdesc="GNS3 network simulator. Graphical user interface package."
 url="https://github.com/GNS3/gns3-gui"
-arch="noarch"
-license="GPL-3.0"
+arch="noarch !armhf" # armhf blocked by py3-qt5 -> qt5-qtdeclarative
+license="GPL-3.0-or-later"
 depends="python3 py3-psutil-gns3 py3-jsonschema-gns3 py3-raven
 py3-qt5 qt5-qtsvg py3-sip"
 makedepends="python3-dev py-setuptools"
 subpackages="$pkgname-doc"
-source="${pkgname}-${pkgver}.tar.gz::https://github.com/GNS3/${pkgname}/archive/v${pkgver}.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="$pkgname-$pkgver.tar.gz::https://github.com/GNS3/gns3-gui/archive/v$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
@@ -23,9 +22,9 @@ check() {
 }
 
 package() {
-	python3 setup.py install --root=${pkgdir} --optimize=1
-	install -Dm644 ${srcdir}/${pkgname}-${pkgver}/resources/images/gns3_icon_256x256.png ${pkgdir}/usr/share/pixmaps/gns3.png
-	install -Dm644 ${srcdir}/${pkgname}-${pkgver}/LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+	python3 setup.py install --root="$pkgdir" --optimize=1
+	install -Dm644 "$builddir"/resources/images/gns3_icon_256x256.png "$pkgdir"/usr/share/pixmaps/gns3.png
+	install -Dm644 "$builddir"/LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
 sha512sums="8216f5d2e5ed44655254a6a457ec5073e44f6266ec77c1a80d1695eb6939dc5594d066a84b501b94ab8124a55d8a74ebec39b6e2c9c2378e85c03aa91413d433  gns3-gui-2.2.3.tar.gz"
