--- a/community/gst-plugins-good/APKBUILD
+++ b/community/gst-plugins-good/APKBUILD
@@ -4,7 +4,7 @@ pkgver=1.16.2
 pkgrel=0
 pkgdesc="GStreamer streaming media framework good plug-ins"
 url="https://gstreamer.freedesktop.org"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-or-later LGPL-2.0-or-later"
 subpackages="$pkgname-lang $pkgname-qt $pkgname-gtk"
 replaces="gst-plugins-good1"
@@ -60,7 +60,7 @@ _mv() {
 
 qt() {
 	pkgdesc="Gstreamer Qt plug-in"
-	for i in $(find "$pkgdir" -type f ); do
+	find "$pkgdir" -type f | while read -r i; do
 		if ldd $i 2>/dev/null | grep -q "libQt"; then
 			_mv "$i"
 		fi
@@ -69,7 +69,7 @@ qt() {
 
 gtk() {
 	pkgdesc="Gstreamer gtk-3 plug-in"
-	for i in $(find "$pkgdir" -type f ); do
+	find "$pkgdir" -type f | while read -r i; do
 		if ldd $i 2>/dev/null | grep -q "libgtk-3"; then
 			_mv "$i"
 		fi
