--- a/community/kaidan/APKBUILD
+++ b/community/kaidan/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kaidan
 pkgver=0.4.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Kaidan, a simple and user-friendly Jabber/XMPP client for every device and platform"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://invent.kde.org/kde/kaidan"
-license="GPL-3.0-or-later with OpenSSL exception, GPL-3.0-or-later, MIT, CC-BY-SA-4.0"
+license="GPL-3.0-or-later-with-openssl-exception AND GPL-3.0-or-later AND MIT AND AND Apache-2.0 AND CC-BY-SA-4.0 AND CC-BY-SA-3.0"
 depends="kirigami2"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev qt5-qttools-dev kirigami2-dev knotifications-dev qxmpp-dev"
 source="https://download.kde.org/stable/kaidan/$pkgver/kaidan-$pkgver.tar.xz"
