--- a/community/kdeclarative/APKBUILD
+++ b/community/kdeclarative/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdeclarative
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Provides integration of QML and KDE Frameworks"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtdeclarative-dev kconfig-dev ki18n-dev kiconthemes-dev kio-dev kwidgetsaddons-dev kwindowsystem-dev kglobalaccel-dev kguiaddons-dev kpackage-dev libepoxy-dev"
