--- a/community/kdeconnect/APKBUILD
+++ b/community/kdeconnect/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.4
 pkgrel=1
 pkgdesc="Adds communication between KDE and your smartphone"
 url="https://community.kde.org/KDEConnect"
-arch="all"
+arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 license="GPL-2.0-only OR GPL-3.0-only"
 depends="kirigami2 sshfs"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtmultimedia-dev ki18n-dev kconfigwidgets-dev kdbusaddons-dev kiconthemes-dev knotifications-dev kio-dev kcmutils-dev kservice-dev kirigami2-dev kpeople-dev kdoctools-dev qca-dev pulseaudio-qt kpeoplevcard-dev"
