--- a/community/kdeplasma-addons/APKBUILD
+++ b/community/kdeplasma-addons/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kdeplasma-addons
 pkgver=5.17.4
-pkgrel=0
-pkgdesc="All kind of addons to improve your Plasma experience "
-arch="all !ppc64le !s390x" # Limited by qt5-qtwebengine
+pkgrel=1
+pkgdesc="All kind of addons to improve your Plasma experience"
+arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.0-only AND GPL-2.0-or-later"
 depends="purpose"
