--- a/community/kholidays/APKBUILD
+++ b/community/kholidays/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kholidays
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Support for icon themes"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
