--- a/community/ki18n/APKBUILD
+++ b/community/ki18n/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ki18n
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Advanced internationalization framework"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later AND (LGPL-2.1-only OR LGPL-3.0-or-later)"
 depends_dev="qt5-qtdeclarative-dev qt5-qtscript-dev"
