--- a/community/kpeople/APKBUILD
+++ b/community/kpeople/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kpeople
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A library that provides access to all contacts and the people who hold them"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtdeclarative-dev kcoreaddons-dev kwidgetsaddons-dev ki18n-dev kitemviews-dev kservice-dev"
