--- a/community/kwin/APKBUILD
+++ b/community/kwin/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwin
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="An easy to use, but flexible, composited Window Manager"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only) AND LGPL-2.1-only"
 depends="qt5-qtwayland qt5-qtmultimedia kirigami2 xorg-server-xwayland"
