--- a/community/libqofono/APKBUILD
+++ b/community/libqofono/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.99
 pkgrel=0
 pkgdesc="A library for accessing the ofono daemon, and a Qt declarative plugin for it"
 url="https://git.merproject.org/mer-core/libqofono/"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
 makedepends="$depends_dev"
