--- a/community/milou/APKBUILD
+++ b/community/milou/APKBUILD
@@ -4,7 +4,7 @@ pkgname=milou
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="A dedicated search application built on top of Baloo"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only) AND (LGPL-2.1-only OR LGPL-3.0-only)"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddons-dev ki18n-dev kdeclarative-dev kservice-dev plasma-framework-dev krunner-dev kitemmodels-dev"
