--- a/community/phonon/APKBUILD
+++ b/community/phonon/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=phonon
 pkgver=4.11.1
-pkgrel=0
+pkgrel=1
 pkgdesc="KDE multimedia backend"
 url="https://phonon.kde.org/"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtdeclarative-dev glib-dev"
 makedepends="$depends_dev extra-cmake-modules qt5-qtbase-dev qt5-qttools-dev"
@@ -15,7 +15,7 @@ options="!check" # No test configuration file found!
 
 build() {
 	cmake \
-		-DCMAKE_BUILD_TYPE=RelWithDebugInfo \
+		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DPHONON_INSTALL_QT_EXTENSIONS_INTO_SYSTEM_QT=FALSE \
