--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-desktop
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="KDE Plasma Desktop"
-arch="all" # Limited by plasma-workspace -> libksysguard -> qt5-qtwebengine
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url='https://www.kde.org/workspaces/plasmadesktop/'
 license="GPL-2.0-only AND LGPL-2.1-only"
 depends="kirigami2 plasma-workspace setxkbmap qqc2-desktop-style"
