--- a/community/plasma-framework/APKBUILD
+++ b/community/plasma-framework/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-framework
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Plasma library and runtime components based upon KF5 and Qt5"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND GPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtquickcontrols2-dev kactivities-dev karchive-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kdbusaddons-dev kdeclarative-dev kglobalaccel-dev kguiaddons-dev ki18n-dev kiconthemes-dev kio-dev kservice-dev kwindowsystem-dev kxmlgui-dev knotifications-dev kpackage-dev kirigami2-dev kwayland-dev"
