--- a/community/plasma-nm/APKBUILD
+++ b/community/plasma-nm/APKBUILD
@@ -4,9 +4,9 @@ pkgname=plasma-nm
 pkgver=5.17.4
 pkgrel=1
 pkgdesc="Plasma applet written in QML for managing network connections"
-arch="all !s390x" # Limited by networkmanager -> iwd
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
-license="GPL-2.0"
+license="(LGPL-2.1-only OR LGPL-3.0-only) AND LGPL-2.0-or-later"
 depends="kirigami2 networkmanager"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev ki18n-dev kwindowsystem-dev kservice-dev kcompletion-dev kwidgetsaddons-dev kio-dev kcoreaddons-dev kwallet-dev kconfigwidgets-dev kiconthemes-dev solid-dev kdbusaddons-dev knotifications-dev plasma-framework-dev kdeclarative-dev qca-dev networkmanager-qt-dev modemmanager-qt-dev mobile-broadband-provider-info"
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-nm-$pkgver.tar.xz"
