--- a/community/plasma-sdk/APKBUILD
+++ b/community/plasma-sdk/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-sdk
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="Applications useful for Plasma Development"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 depends="kirigami2"
