--- a/community/print-manager/APKBUILD
+++ b/community/print-manager/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=print-manager
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/applications/utilities/"
 pkgdesc="A tool for managing print jobs and printers"
 license="GPL-2.0-or-later"
