--- a/community/prison/APKBUILD
+++ b/community/prison/APKBUILD
@@ -4,7 +4,7 @@ pkgname=prison
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A barcode API to produce QRCode barcodes and DataMatrix barcodes"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="MIT"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
