--- a/community/purpose/APKBUILD
+++ b/community/purpose/APKBUILD
@@ -4,7 +4,7 @@ pkgname=purpose
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Framework for providing abstractions to get the developer's purposes fulfilled"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddons-dev ki18n-dev kconfig-dev kio-dev
