--- a/community/py3-qt5/APKBUILD
+++ b/community/py3-qt5/APKBUILD
@@ -6,7 +6,7 @@ pkgver=5.13.1
 pkgrel=1
 pkgdesc="A set of Python 3 bindings for the Qt toolkit"
 url="http://riverbankcomputing.co.uk/software/pyqt/intro"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends="python3 py3-sip-pyqt5"
 makedepends="python3-dev py-dbus-dev py-sip-dev
@@ -30,7 +30,7 @@ build() {
 		--sip /usr/bin/sip \
 		--sipdir /usr/share/sip/PyQt5 \
 		--qsci-api
-	find -name 'Makefile' | xargs sed -i 's|-Wl,-rpath,/usr/lib||g;s|-Wl,-rpath,.* ||g'
+	find . -name 'Makefile' -print0 | xargs sed -i 's|-Wl,-rpath,/usr/lib||g;s|-Wl,-rpath,.* ||g'
 	make
 }
 
