--- a/community/py3-qtwebengine/APKBUILD
+++ b/community/py3-qtwebengine/APKBUILD
@@ -6,12 +6,12 @@ pkgrel=2
 pkgdesc="Python 3 bindings for QtWebEngine"
 url="https://www.riverbankcomputing.com/software/pyqtwebengine/intro"
 # ppc64le, s390x: not supported
-arch="all !ppc64le !s390x"
+arch="all !ppc64le !s390x !armhf" # armhf blocked by py3-qt5 -> qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends="python3"
 makedepends="python3-dev py3-qt5 qt5-qtwebengine-dev py-sip-dev"
 source="https://www.riverbankcomputing.com/static/Downloads/PyQtWebEngine/$pkgver/PyQtWebEngine_gpl-$pkgver.tar.gz"
-builddir="${srcdir}/${_pyname}_gpl-${pkgver}"
+builddir="$srcdir"/"$_pyname"_gpl-"$pkgver"
 
 build() {
 	python3 configure.py \
@@ -26,7 +26,7 @@ check() {
 }
 
 package() {
-	make -j1 DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
+	make -j1 DESTDIR="$pkgdir" INSTALL_ROOT="$pkgdir" install
 }
 
 sha512sums="2bcb0e4da51de9cfb5128e03c03ada77f2d4b99b0885da910584717681b96759ce4301c325cbbf43602d46746e2d37d81ed62f77dd63b33359fd5fae74d7f010  PyQtWebEngine_gpl-5.12.1.tar.gz"
