--- a/community/qqc2-desktop-style/APKBUILD
+++ b/community/qqc2-desktop-style/APKBUILD
@@ -4,7 +4,7 @@ pkgname=qqc2-desktop-style
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A style for Qt Quick Controls 2 to make it follow your desktop theme"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-3.0-only AND (GPL-2.0-only OR GPL-3.0-only)"
 depends="qt5-qtgraphicaleffects qt5-qtquickcontrols2"
