--- a/community/qt5-qtdeclarative/APKBUILD
+++ b/community/qt5-qtdeclarative/APKBUILD
@@ -6,12 +6,12 @@ _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=0
+_v=${_ver/rc/RC}
+pkgrel=1
 pkgdesc="Qt5 - QtDeclarative component"
 url="http://qt-project.org/"
-arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+arch="all !armhf" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev python3"
 subpackages="$pkgname-dev"
 
@@ -19,12 +19,12 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_v.tar.xz
 	qt-musl-stackbottom.patch
 	"
 
 _qt5_prefix=/usr/lib/qt5
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir/$_pkgname-${_v%-*}"
 
 build() {
 	# HACK so calls to "python" get what we want
@@ -42,7 +42,7 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 
 	mkdir -p "$pkgdir"/usr/bin/
-	for i in "$pkgdir"/$_qt5_prefix/bin/*; do
+	for i in "$pkgdir"/"$_qt5_prefix"/bin/*; do
 		ln -s ../lib/qt5/bin/${i##*/} "$pkgdir"/usr/bin/${i##*/}-qt5
 	done
 }
