--- a/community/qt5-qtvirtualkeyboard/APKBUILD
+++ b/community/qt5-qtvirtualkeyboard/APKBUILD
@@ -3,22 +3,22 @@
 pkgname=qt5-qtvirtualkeyboard
 _pkgname="${pkgname/qt5-/}-everywhere-src"
 pkgver=5.12.5
-pkgrel=0
-arch="all"
+pkgrel=1
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="http://qt-project.org/"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 pkgdesc="Virtual keyboard framework"
 depends_dev="qt5-qtsvg-dev"
 makedepends="$depends_dev hunspell-dev qt5-qtbase-dev qt5-qtdeclarative-dev"
 subpackages="$pkgname-dev"
-builddir="$srcdir/${pkgname/qt5-/}-everywhere-src-$pkgver"
+builddir="$srcdir/$_pkgname-$pkgver"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver}/submodules/$_pkgname-$pkgver.tar.xz"
+source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtvirtualkeyboard-everywhere-src-$pkgver.tar.xz"
 
 build() {
 	qmake-qt5 CONFIG+="lang-all handwriting"
