--- a/community/qt5-qtwayland/APKBUILD
+++ b/community/qt5-qtwayland/APKBUILD
@@ -3,10 +3,10 @@
 pkgname=qt5-qtwayland
 _pkgname="${pkgname/qt5-/}-everywhere-src"
 pkgver=5.12.5
-pkgrel=1
-arch="all"
+pkgrel=2
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="http://qt-project.org/"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 pkgdesc='Provides APIs for Wayland'
 makedepends="$depends_dev libxkbcommon-dev libxcomposite-dev
 	qt5-qtquickcontrols2-dev qt5-qtdeclarative-dev qt5-qtbase-dev wayland-dev"
@@ -18,7 +18,7 @@ case $pkgver in
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver}/submodules/$_pkgname-$pkgver.tar.xz
+source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtwayland-everywhere-src-$pkgver.tar.xz
 	03e8c91fc28b77c4f027b6c6d582b85878efae41.patch"
 
 build() {
@@ -27,12 +27,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir" install
 
 	# Drop QMAKE_PRL_BUILD_DIR because reference the build dir
