--- a/community/qt5-qtwebkit/APKBUILD
+++ b/community/qt5-qtwebkit/APKBUILD
@@ -4,9 +4,8 @@ pkgver=5.9.1
 pkgrel=7
 pkgdesc="Qt5 - QtWebKit components"
 url="http://qt-project.org/"
-arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
-depends=""
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="qt5-qtdeclarative-dev gstreamer-dev gst-plugins-base-dev
 	libxslt-dev mesa-dev icu-dev libxext-dev glib-dev libxcomposite-dev
 	libxrender-dev
@@ -31,53 +30,50 @@ subpackages="$pkgname-dev"
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
+_v=${_ver/rc/RC}
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebkit-opensource-src-$_V.tar.xz
+source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebkit-opensource-src-$_v.tar.xz
 	pic.patch
 	fix-rpath.patch
 	fix-execinfo.patch
 	0001-Add-ARM-64-support.patch
 	qt5.12.patch
 	"
-builddir="$srcdir"/qtwebkit-opensource-src-$_V
+builddir="$srcdir/qtwebkit-opensource-src-$_v"
 
 prepare() {
-	default_prepare || return 1  # apply patches
+	default_prepare  # apply patches
 	# remove some bundled
 	mkdir Source/ThirdParty/orig
 	mv Source/ThirdParty/gtest/ \
 		Source/ThirdParty/qunit/ \
-		Source/ThirdParty/orig/ \
-		|| return 1
-	syncqt-qt5.pl -version $_V Source/sync.profile || return 1
+		Source/ThirdParty/orig/
+	syncqt-qt5.pl -version $_V Source/sync.profile
 }
 
 build() {
-	cd "$builddir"
-	qmake-qt5 || return 1
+	qmake-qt5
 
 	# /usr/include/fortify/stdlib.h:20:25: fatal error: stdlib.h: No such file or directory
 	# see: http://stackoverflow.com/questions/37218953/isystem-on-a-system-include-directory-causes-errors
 	# see: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=71090
 	# see: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=70129
 	qmake-qt5 Source/JavaScriptCore/LLIntOffsetsExtractor.pro -o \
-		Source/JavaScriptCore/Makefile.LLIntOffsetsExtractor || return 1
+		Source/JavaScriptCore/Makefile.LLIntOffsetsExtractor
 	sed -i 's:-isystem /usr/include ::' \
-		Source/JavaScriptCore/Makefile.LLIntOffsetsExtractor || return 1
+		Source/JavaScriptCore/Makefile.LLIntOffsetsExtractor
 
-	make || return 1
+	make
 }
 
 package() {
-	cd "$builddir"
-	make install INSTALL_ROOT="$pkgdir" || return 1
+	make install INSTALL_ROOT="$pkgdir"
 	# remove rpath
-#	chrpath --delete "$pkgdir"/usr/lib/qt5/libexec/* || return 1
+#	chrpath --delete "$pkgdir"/usr/lib/qt5/libexec/*
 	sed -i -e 's:-L/home[^ ]\+::g' "$pkgdir"/usr/lib/pkgconfig/*.pc
 }
 
