--- a/community/sddm/APKBUILD
+++ b/community/sddm/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.18.1
 pkgrel=6
 pkgdesc="Simple Desktop Display Manager"
 url="https://github.com/sddm/sddm/"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-only"
 depends="elogind xorg-server dbus-x11 upower"
 makedepends="cmake extra-cmake-modules qt5-qtbase-dev libxcb-dev upower-dev
@@ -16,7 +16,7 @@ install="sddm.pre-install"
 langdir="/usr/share/sddm/translations"
 pkgusers="sddm"
 pkggroups="sddm"
-source="$pkgname-$pkgver.tar.gz::https://github.com/sddm/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/sddm/sddm/archive/v$pkgver.tar.gz
 	pam-path-fix.patch
 	sddm.initd
 	"
