--- a/community/systemsettings/APKBUILD
+++ b/community/systemsettings/APKBUILD
@@ -4,7 +4,7 @@ pkgname=systemsettings
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="Plasma system manager for hardware, software, and workspaces"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 depends="kirigami2"
