--- a/testing/artikulate/APKBUILD
+++ b/testing/artikulate/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=artikulate
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://edu.kde.org/artikulate"
 pkgdesc="Improve your pronunciation by listening to native speakers"
 license="(GPL-2.0-only OR GPL-3.0-only) AND GFDL-1.2-only"
