--- a/testing/elektra/APKBUILD
+++ b/testing/elektra/APKBUILD
@@ -9,7 +9,7 @@ pkgver=0.8.21
 pkgrel=9
 pkgdesc="A universal and secure framework to access configuration parameters"
 url="https://www.libelektra.org"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="BSD-3-Clause"
 _luaver=5.3
 # kdb doesn't work correctly without these plugins.
@@ -56,7 +56,7 @@ subpackages="
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-plugins-all:_all:noarch
 	"
-source="$_pkgname-$pkgver.tar.gz::https://github.com/ElektraInitiative/$_pkgname/archive/$pkgver.tar.gz
+source="$_pkgname-$pkgver.tar.gz::https://github.com/ElektraInitiative/libelektra/archive/$pkgver.tar.gz
 	fix-bash-shebang.patch
 	fix-augeas-internal-inconsistency.patch
 	cmake-allow-override-rpath.patch
@@ -183,14 +183,14 @@ build() {
 		-DENABLE_DEBUG=OFF \
 		-DENABLE_LOGGER=OFF \
 		-DINSTALL_TESTING=OFF \
-		-DBINDINGS=$(printf '%s;' $_bindings) \
-		-DPLUGINS=$(printf '%s;' $_plugins) \
+		-DBINDINGS="$(printf '%s;' $_bindings)" \
+		-DPLUGINS="$(printf '%s;' $_plugins)" \
 		-DTOOLS='kdb;qt-gui' \
 		\
 		-DLUA_LIBRARIES="/usr/lib/liblua-$_luaver.so.0" \
-		-DLUA_INCLUDE_DIR=$(pkg-config --variable=includedir lua$_luaver ) \
-		-DTARGET_LUA_CMOD_FOLDER=$(pkg-config --variable=INSTALL_LMOD lua$_luaver) \
-		-DTARGET_LUA_CMOD_FOLDER=$(pkg-config --variable=INSTALL_CMOD lua$_luaver)
+		-DLUA_INCLUDE_DIR="$(pkg-config --variable=includedir lua$_luaver )" \
+		-DTARGET_LUA_CMOD_FOLDER="$(pkg-config --variable=INSTALL_LMOD lua$_luaver)" \
+		-DTARGET_LUA_CMOD_FOLDER="$(pkg-config --variable=INSTALL_CMOD lua$_luaver)"
 	make
 }
 
@@ -311,14 +311,14 @@ _plugin() {
 	[ -f "$readme" ] || die "$readme doesn't exist!"
 
 	pkgdesc="Elektra plugin - $(_getinfo description "$readme")"
-	depends=$(_to_pkgnames $(_getinfo needs "$readme" '') | xargs)
+	depends=$(_to_pkgnames "$(_getinfo needs \"$readme\" '')" | xargs)
 
 	if provides=$(_getinfo provides "$readme"); then
 		# Convert plugin names to package names.
 		provides=$(_to_pkgnames $provides)
 
 		# Remove pkgnames clashing with subpackages.
-		: ${_plugins_pkgname:="$(printf "$pkgname-%s\n" $_plugins dev doc libs)"}
+		: "${_plugins_pkgname:=$(printf \"$pkgname-%s\\n\" $_plugins dev doc libs)}"
 		provides=$(_set_difference "$provides" "$_plugins_pkgname" | xargs)
 	fi
 
@@ -363,7 +363,7 @@ _getinfo() {
 	local value
 
 	value=$(sed -n "s|^- infos/$name = *\(.*\) *|\1|p" "$file")
-	[ "$value$default" ] || return 1
+	[ "$value$default" ]
 	printf '%s\n' "${value:-$default}"
 }
 
