--- a/testing/git-cola/APKBUILD
+++ b/testing/git-cola/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 pkgname=git-cola
 pkgver=3.6
-pkgrel=0
+pkgrel=1
 pkgdesc="A GUI application for git built on Python & Qt5"
 url="https://git-cola.github.io"
 arch="noarch"
 license="GPL-2.0-or-later"
-depends="python3 py3-qtpy"
+depends="python3 py3-qt5"
 checkdepends="py3-nose"
 makedepends="py3-setuptools"
 subpackages="$pkgname-doc"
