--- a/testing/imgbrd-grabber/APKBUILD
+++ b/testing/imgbrd-grabber/APKBUILD
@@ -6,12 +6,12 @@ pkgrel=0
 pkgdesc="Powerful imageboard/booru downloader"
 options="!check" # Tests requires graphics
 url="https://bionus.github.io/imgbrd-grabber"
-arch="all !mips64 !mips64el" # nodejs restrictions
+arch="all !mips64 !mips64el !armhf" # mps64 and mips64el blocked by nodejs restrictions, armhf blocked by qt5-qtdeclarative
 license="Apache-2.0"
 makedepends="cmake nodejs qt5-qtdeclarative-dev qt5-qtmultimedia-dev
 	qt5-qtbase-mysql qt5-qtbase-odbc qt5-qtbase-sqlite qt5-qtbase-tds
 	qt5-qtscript-dev qt5-qtbase-dev qt5-qttools-dev npm"
-source="$pkgname-$pkgver.tar.gz::https://github.com/Bionus/imgbrd-grabber/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/Bionus/imgbrd-grabber/archive/v$pkgver.tar.gz"
 
 build() {
 	sed -i 's|USE_QSCINTILLA 1|USE_QSCINTILLA 0|' gui/CMakeLists.txt
@@ -27,7 +27,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
-		${CMAKE_CROSSOPTS}
+		$CMAKE_CROSSOPTS
 	make
 }
 
