--- a/testing/kamoso/APKBUILD
+++ b/testing/kamoso/APKBUILD
@@ -3,13 +3,13 @@
 pkgname=kamoso
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 url="https://kde.org/applications/multimedia/org.kde.kamoso"
 pkgdesc="An application to take pictures and videos out of your webcam"
 license="GPL-2.0-or-later AND LGPL-2.1-only"
 depends="kirigami2 qt5-qtquickcontrols2 gst-plugins-good gst-plugins-bad"
 makedepends="extra-cmake-modules qt5-qtbase-dev kconfig-dev kdoctools-dev kio-dev ki18n-dev purpose-dev knotifications-dev gstreamer-dev glib-dev gobject-introspection-dev gst-plugins-base-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kamoso-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # Broken
 
