--- a/testing/kitinerary/APKBUILD
+++ b/testing/kitinerary/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kitinerary
 pkgver=19.12.0
 pkgrel=1
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://kontact.kde.org/"
 pkgdesc="Data model and extraction system for travel reservation information"
 license="LGPL-2.0-or-later"
