--- a/testing/krita/APKBUILD
+++ b/testing/krita/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=krita
 pkgver=4.2.6
 pkgrel=3
-arch="all"
+arch="all !armhf" # Blocked by py3-qt5 -> qt5-qtdeclarative
 url="https://krita.org/"
 pkgdesc="Free digital painting application. Digital Painting, Creative Freedom!"
 license="GPL-2.0-or-later"
