--- a/testing/mellowplayer/APKBUILD
+++ b/testing/mellowplayer/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.5.8
 pkgrel=0
 pkgdesc="QT based cloud music integration for your desktop"
 url="https://colinduquesnoy.gitlab.io/MellowPlayer/"
-arch="all !ppc64le !s390x" # qt5-qtwebengine missing
+arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine missing, armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends="qt5-qtgraphicaleffects qt5-qtquickcontrols qt5-qtsvg qt5-qtwayland"
 makedepends="cmake qt5-qtdeclarative-dev qt5-qtquickcontrols2-dev qt5-qtbase-mysql
