--- a/testing/minuet/APKBUILD
+++ b/testing/minuet/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=minuet
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://minuet.kde.org/"
 pkgdesc="Minuet Music Education"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
