--- a/testing/nemo-qml-plugin-dbus/APKBUILD
+++ b/testing/nemo-qml-plugin-dbus/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.1.21
 pkgrel=0
 pkgdesc="Nemo's QML plugin for DBus"
 url="https://git.merproject.org/mer-core/nemo-qml-plugin-dbus"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="BSD-3-Clause"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
 makedepends="$depends_dev"
