--- a/testing/py3-pyotherside/APKBUILD
+++ b/testing/py3-pyotherside/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.5.8
 pkgrel=1
 pkgdesc="Asynchronous Python 3 Bindings for Qt5"
 url="https://thp.io/2011/pyotherside"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative"
 license="ISC"
 makedepends="python3-dev qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtsvg-dev"
 options="!check" # can't run tests if not installed.
