--- a/testing/qmlrunner/APKBUILD
+++ b/testing/qmlrunner/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.0.1
 pkgrel=0
 pkgdesc="Runner for QML-only apps"
 url="https://github.com/rinigus/qmlrunner"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-3.0-or-later"
 makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/rinigus/qmlrunner/archive/$pkgver.tar.gz"
