--- a/testing/qownnotes/APKBUILD
+++ b/testing/qownnotes/APKBUILD
@@ -5,12 +5,12 @@ pkgver=20.1.1
 pkgrel=0
 pkgdesc="Plain-text file markdown note taking with Nextcloud/ownCloud integration"
 url="https://www.qownnotes.org/"
-arch="all !ppc64le !s390x"
+arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-only"
 makedepends="qt5-qtdeclarative-dev qt5-qtsvg-dev qt5-qtxmlpatterns-dev
 	qt5-qttools-dev qt5-qtbase-dev qt5-qtwebsockets-dev botan-dev"
 subpackages="$pkgname-lang"
-source="https://download.tuxfamily.org/qownnotes/src/qownnotes-${pkgver}.tar.xz"
+source="https://download.tuxfamily.org/qownnotes/src/qownnotes-$pkgver.tar.xz"
 
 prepare() {
 	default_prepare
@@ -19,9 +19,9 @@ prepare() {
 
 build() {
 	/usr/lib/qt5/bin/qmake \
-		QMAKE_CFLAGS_RELEASE="${CFLAGS}" \
-		QMAKE_CXXFLAGS_RELEASE="${CXXFLAGS}" \
-		QMAKE_LFLAGS_RELEASE="${LDFLAGS}"
+		QMAKE_CFLAGS_RELEASE="$CFLAGS" \
+		QMAKE_CXXFLAGS_RELEASE="$CXXFLAGS" \
+		QMAKE_LFLAGS_RELEASE="$LDFLAGS"
 	make
 }
 
@@ -30,17 +30,17 @@ check() {
 }
 
 package() {
-	install -D -m755 QOwnNotes "${pkgdir}/usr/bin/QOwnNotes"
-	install -D -m644 PBE.QOwnNotes.desktop "${pkgdir}/usr/share/applications/PBE.QOwnNotes.desktop"
-	install -D -m644 "images/icons/128x128/apps/QOwnNotes.png" "${pkgdir}/usr/share/pixmaps/QOwnNotes.png"
+	install -D -m755 QOwnNotes "$pkgdir/usr/bin/QOwnNotes"
+	install -D -m644 PBE.QOwnNotes.desktop "$pkgdir/usr/share/applications/PBE.QOwnNotes.desktop"
+	install -D -m644 "images/icons/128x128/apps/QOwnNotes.png" "$pkgdir/usr/share/pixmaps/QOwnNotes.png"
 	for format in 16x16 24x24 32x32 48x48 64x64 96x96 128x128 256x256 512x512 ; do
-		install -D -m644 "images/icons/${format}/apps/QOwnNotes.png" "${pkgdir}/usr/share/icons/hicolor/$format/apps/QOwnNotes.png"
+		install -D -m644 "images/icons/$format/apps/QOwnNotes.png" "$pkgdir/usr/share/icons/hicolor/$format/apps/QOwnNotes.png"
 	done
 }
 
 lang() {
-	install -d "${subpkgdir}/usr/share/QOwnNotes/languages/"
-	install -D -m644 ${builddir}/languages/*.qm "${subpkgdir}/usr/share/QOwnNotes/languages/"
+	install -d "$subpkgdir/usr/share/QOwnNotes/languages/"
+	install -D -m644 "$builddir/languages/*.qm" "$subpkgdir/usr/share/QOwnNotes/languages/"
 }
 
 sha512sums="c540ca18204968cef07d5150366c28c910ac03ba0311342e8741d8ff75c70187842a66321b083f0ccc5f68a40884a1a2b0d23241ae5103da4b4823a472ff1e68  qownnotes-20.1.1.tar.xz"
