--- a/testing/qt-creator/APKBUILD
+++ b/testing/qt-creator/APKBUILD
@@ -6,7 +6,7 @@ pkgver=4.11.0
 pkgrel=0
 pkgdesc="Lightweight and cross-platform IDE for Qt"
 url="https://qt-project.org/wiki/Category:Tools::QtCreator"
-arch="all !ppc64le !s390x"
+arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-3.0-only WITH Qt-GPL-exception-1.0"
 depends="
 	qt5-qtbase-sqlite
