--- a/testing/vidcutter/APKBUILD
+++ b/testing/vidcutter/APKBUILD
@@ -5,12 +5,12 @@ pkgver=6.0.0
 pkgrel=3
 pkgdesc="A modern, simple to use, constantly evolving and hella fast MEDIA CUTTER"
 url="https://vidcutter.ozmartians.com"
-arch="all"
+arch="all !armhf" # Blocked by py3-qt5 -> qt5-qtdeclarative
 license="GPL-3.0-or-later"
 depends="python3 ffmpeg mediainfo py3-qt5"
 subpackages="$pkgname-doc"
 makedepends="mpv-dev python3-dev py3-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ozmartian/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/ozmartian/vidcutter/archive/$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
