--- a/testing/yubikey-manager-qt/APKBUILD
+++ b/testing/yubikey-manager-qt/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.1.3
 pkgrel=0
 pkgdesc="Cross-platform application for configuring any YubiKey over all USB transports"
 url="https://developers.yubico.com/yubikey-manager-qt/"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="BSD-2-Clause"
 depends="py3-ykman python3 py3-pyotherside qt5-qtquickcontrols
 	qt5-qtgraphicaleffects"
