--- a/community/baloo/APKBUILD
+++ b/community/baloo/APKBUILD
@@ -4,7 +4,7 @@ pkgname=baloo
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A framework for searching and managing metadata"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtdeclarative-dev lmdb-dev kcoreaddons-dev kconfig-dev kdbusaddons-dev ki18n-dev kidletime-dev solid-dev kfilemetadata-dev kcrash-dev kio-dev kservice-dev kbookmarks-dev kcompletion-dev kjobwidgets-dev"
