--- a/community/bluedevil/APKBUILD
+++ b/community/bluedevil/APKBUILD
@@ -4,7 +4,7 @@ pkgname=bluedevil
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="Integrate the Bluetooth technology within KDE workspace and applications"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends="kded bluez"
