--- a/community/discover/APKBUILD
+++ b/community/discover/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=discover
 pkgver=5.17.4
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://userbase.kde.org/Discover"
 pkgdesc="KDE Plasma resources management GUI"
 license="LGPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only) AND GFDL-1.2-only"
