--- a/community/kactivities-stats/APKBUILD
+++ b/community/kactivities-stats/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kactivities-stats
 pkgver=5.65.0
 pkgrel=1
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 pkgdesc="A library for accessing the usage data collected by the activities system"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
