--- a/community/kactivities/APKBUILD
+++ b/community/kactivities/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kactivities
 pkgver=5.65.0
 pkgrel=1
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 pkgdesc="Core components for the KDE's Activities"
 url="https://community.kde.org/Frameworks"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
