--- a/community/kirigami2/APKBUILD
+++ b/community/kirigami2/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kirigami2
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A QtQuick based components set"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only"
 depends="qt5-qtgraphicaleffects"
