--- a/community/knewstuff/APKBUILD
+++ b/community/knewstuff/APKBUILD
@@ -4,7 +4,7 @@ pkgname=knewstuff
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Framework for downloading and sharing additional application data"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends="kirigami2"
