--- a/community/kquickcharts/APKBUILD
+++ b/community/kquickcharts/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kquickcharts
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="A QtQuick plugin providing high-performance charts"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtquickcontrols2-dev"
