--- a/community/latte-dock/APKBUILD
+++ b/community/latte-dock/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=latte-dock
 pkgver=0.9.7
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://store.kde.org/p/1169519/"
 pkgdesc="A dock based on Plasma Frameworks"
 license="LGPL-2.0-or-later AND GPL-2.0-or-later"
