--- a/community/okular/APKBUILD
+++ b/community/okular/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=okular
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 url="https://kde.org/applications/office/org.kde.okular"
 pkgdesc="A universal document viewer"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
