--- a/community/plasma-angelfish/APKBUILD
+++ b/community/plasma-angelfish/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-angelfish
 pkgver=1.3.0
 pkgrel=0
 pkgdesc="Small Webbrowser for Plasma Mobile"
-arch="all !ppc64le !s390x" # Limited by qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by kirigami2 -> qt5-qtdeclarative-dev
 url="https://phabricator.kde.org/source/plasma-angelfish/"
 license="GPL-3.0-or-later"
 depends="kirigami2 plasma-framework purpose"
