--- a/community/plasma-applet-weather-widget/APKBUILD
+++ b/community/plasma-applet-weather-widget/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=plasma-applet-weather-widget
 pkgver=1.6.10
 pkgrel=2
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.linux-apps.com/content/show.php/Weather+Widget?content=169572"
 pkgdesc="Plasmoid for showing weather information from yr.no and Open Weather Map servers"
 license="GPL-2.0-only"
