--- a/community/plasma-pa/APKBUILD
+++ b/community/plasma-pa/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-pa
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="Plasma applet for audio volume management using PulseAudio"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-only OR LGPL-3.0-only AND GPL-2.0-only"
 depends="pulseaudio kirigami2"
