--- a/community/plasma-thunderbolt/APKBUILD
+++ b/community/plasma-thunderbolt/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=plasma-thunderbolt
 pkgver=5.17.4
 pkgrel=0
-arch="all !armhf !armv7" # Limited by bolt -> polkit
+arch="all !armhf !armv7" # Limited by bolt -> polkit, armhf also limited by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 pkgdesc="Plasma integration for controlling Thunderbolt devices"
 license="GPL-2.0-only OR GPL-3.0-only"
