--- a/community/plasma-workspace/APKBUILD
+++ b/community/plasma-workspace/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-workspace
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="KDE Plasma Workspace"
-arch="all"
+arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="(GPL-2.0-only OR GPL-3.0-only) AND LGPL-2.1-or-later AND GPL-2.0-or-later AND MIT AND LGPL-2.1-only AND LGPL-2.0-or-later AND (LGPL-2.1-only OR LGPL-3.0-only) AND LGPL-2.0-only"
 depends="tzdata qt5-qtquickcontrols kirigami2 kinit qt5-qttools kwin kactivitymanagerd milou plasma-integration qtchooser kded"
