--- a/community/pulseaudio-qt/APKBUILD
+++ b/community/pulseaudio-qt/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=pulseaudio-qt
 pkgver=1.2
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://cgit.kde.org/pulseaudio-qt.git/"
 pkgdesc="Pulseaudio bindings for Qt"
 license="LGPL-2.1-only OR LGPL-3.0-only"
