--- a/community/qt5-qtlocation/APKBUILD
+++ b/community/qt5-qtlocation/APKBUILD
@@ -6,12 +6,12 @@ pkgver=5.12.5
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
+_v=${_ver/rc/RC}
 pkgrel=0
 pkgdesc="Qt5 - Location component"
 url="http://qt-project.org/"
-arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 options="!check" # upstream does not provide check
 makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev icu-dev"
 subpackages="$pkgname-dev"
@@ -20,15 +20,15 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtlocation-everywhere-src-$_v.tar.xz
 	fix-build.patch"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir/$_pkgname-${_v%-*}"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
-	mkdir -p build
+
+	mkdir -p "$builddir"/build
 }
 
 build() {
