--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -1,13 +1,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtwebengine
 pkgver=5.12.5
-pkgrel=2
+pkgrel=3
 pkgdesc="Qt5 - QtWebEngine components"
 url="http://qt-project.org/"
 # ppc64le, s390x: not supported
-arch="all !ppc64le !s390x"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
-depends=""
+arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="qt5-qtdeclarative-dev qt5-qtwebchannel-dev gstreamer-dev gst-plugins-base-dev
 	libxslt-dev mesa-dev icu-dev libxext-dev glib-dev libxcomposite-dev
 	libxrender-dev ninja ffmpeg-dev
@@ -39,7 +38,6 @@ makedepends="$depends_dev
 	linux-headers
 	nss-dev
 	opus-dev
-	paxmark
 	pcre-dev
 	protobuf-dev
 	qt5-qtbase-dev
@@ -56,13 +54,13 @@ subpackages="$pkgname-dev"
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
+_v=${_ver/rc/RC}
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengine-everywhere-src-$_V.tar.xz
+source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengine-everywhere-src-$_v.tar.xz
 	arm-void-is-not-android.patch
 	qt-musl-dispatch_to_musl.patch
 	qt-musl-execinfo.patch
@@ -80,20 +78,18 @@ source="http://download.qt-project.org/$_rel/qt/${pkgver%.*}/$_ver/submodules/qt
 	musl-sandbox.patch
 	yasm-nls.patch
 	"
-builddir="$srcdir"/qtwebengine-everywhere-src-$_V
+builddir="$srcdir"/qtwebengine-everywhere-src-$_v
 
 build() {
-	cd "$builddir"
 	export NINJA_PATH="/usr/bin/ninja"
 	qmake-qt5 QMAKE_EXTRA_ARGS+="-webengine-ffmpeg -webengine-opus -webengine-webp"
-	make || paxmark -m src/core/release/mksnapshot && make
+	make
 }
 
 package() {
-	cd "$builddir"
-	make install INSTALL_ROOT="$pkgdir" || return 1
+	make install INSTALL_ROOT="$pkgdir"
 	# remove rpath
-#	chrpath --delete "$pkgdir"/usr/lib/qt5/libexec/* || return 1
+#	chrpath --delete "$pkgdir"/usr/lib/qt5/libexec/*
 	sed -i -e 's:-L/home[^ ]\+::g' "$pkgdir"/usr/lib/pkgconfig/*.pc
 }
 
