--- a/community/sddm-kcm/APKBUILD
+++ b/community/sddm-kcm/APKBUILD
@@ -4,7 +4,7 @@ pkgname=sddm-kcm
 pkgver=5.17.4
 pkgrel=0
 pkgdesc="Config module for SDDM"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org"
 license="GPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only) AND LGPL-2.1-or-later AND GPL-2.0-only"
 depends="sddm systemsettings"
