--- a/community/solid/APKBUILD
+++ b/community/solid/APKBUILD
@@ -4,7 +4,7 @@ pkgname=solid
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="Hardware integration and detection"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtdeclarative-dev"
