--- a/community/threadweaver/APKBUILD
+++ b/community/threadweaver/APKBUILD
@@ -4,7 +4,7 @@ pkgname=threadweaver
 pkgver=5.65.0
 pkgrel=0
 pkgdesc="High-level multithreading framework"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
