--- a/testing/alkimia/APKBUILD
+++ b/testing/alkimia/APKBUILD
@@ -3,11 +3,11 @@
 pkgname=alkimia
 pkgver=8.0.2
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Alkimia/libalkimia"
 pkgdesc="A library with common classes and functionality used by finance applications for the KDE SC"
 license="GPL-3.0-or-later"
-makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev qt5-qtdeclarative-dev kconfig-dev kcoreaddons-dev kcompletion-dev ki18n-dev kpackage-dev plasma-framework-dev knewstuff-dev kio-dev kiconthemes-dev ktextwidgets-dev kdoctools-dev kitemmodels-dev kdelibs4support-dev gmp-dev doxygen graphviz"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev qt5-qtdeclarative-dev kconfig-dev kcoreaddons-dev kcompletion-dev ki18n-dev kpackage-dev plasma-framework-dev knewstuff-dev kio-dev kiconthemes-dev ktextwidgets-dev kdoctools-dev kitemmodels-dev kdelibs4support-dev kinit-dev gmp-dev doxygen graphviz"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/alkimia/$pkgver/alkimia-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
