--- a/testing/analitza/APKBUILD
+++ b/testing/analitza/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=analitza
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://edu.kde.org/"
 pkgdesc="A library to add mathematical features to your program"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
