--- a/testing/kalgebra/APKBUILD
+++ b/testing/kalgebra/APKBUILD
@@ -3,12 +3,12 @@
 pkgname=kalgebra
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://edu.kde.org/kalgebra/"
 pkgdesc="2D and 3D Graph Calculator"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsvg-dev qt5-qtdeclarative-dev analitza-dev ki18n-dev kcoreaddons-dev kconfigwidgets-dev kwidgetsaddons-dev kio-dev kdoctools-dev ncurses-dev readline-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kalgebra-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
