--- a/testing/kanagram/APKBUILD
+++ b/testing/kanagram/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kanagram
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://edu.kde.org/kanagram/"
 pkgdesc="Letter Order Game"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
