--- a/testing/khangman/APKBUILD
+++ b/testing/khangman/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=khangman
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="http://edu.kde.org/khangman"
 pkgdesc="Hangman game"
 license="GPL-2.0-or-later"
