--- a/testing/kirigami-gallery/APKBUILD
+++ b/testing/kirigami-gallery/APKBUILD
@@ -3,13 +3,13 @@
 pkgname=kirigami-gallery
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 url="https://kde.org/applications/development/org.kde.kirigami2.gallery"
 pkgdesc="Gallery application built using Kirigami"
 license="LGPL-2.0-or-later"
 depends="kirigami2"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtquickcontrols2-dev qt5-qtsvg-dev qt5-qttools-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kirigami-gallery-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
 prepare() {
