--- a/testing/ktouch/APKBUILD
+++ b/testing/ktouch/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=ktouch
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://edu.kde.org/ktouch/"
 pkgdesc="Touch Typing Tutor"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
