--- a/testing/libkdegames/APKBUILD
+++ b/testing/libkdegames/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libkdegames
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://kde.org/applications/games"
 pkgdesc="Common code and data for many KDE games"
 license="LGPL-2.0-only AND GFDL-1.2-only"
