--- a/testing/marble/APKBUILD
+++ b/testing/marble/APKBUILD
@@ -4,12 +4,12 @@ pkgname=marble
 pkgver=19.12.0
 pkgrel=0
 pkgdesc="A Virtual Globe and World Atlas that you can use to learn more about Earth"
-arch="all !ppc64le !s390x" # Limited by qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by qt5-qtdeclarative
 url='https://marble.kde.org'
 license="LGPL-2.1-or-later AND GPL-3.0-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtsvg-dev qt5-qtdeclarative-dev qt5-qtwebengine-dev qt5-qttools-dev qt5-qtserialport-dev qt5-qtlocation-dev kdoctools-dev phonon-dev gpsd-dev kcrash-dev kcoreaddons-dev kwallet-dev knewstuff-dev kparts-dev plasma-framework-dev krunner-dev ki18n-dev kio-dev shared-mime-info"
 makedepends="$depends_dev extra-cmake-modules"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/marble-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 options="!check" # Requires itself to be installed
 
