--- a/testing/okteta/APKBUILD
+++ b/testing/okteta/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=okteta
 pkgver=0.26.2
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://kde.org/applications/utilities/org.kde.okteta"
 pkgdesc="KDE hex editor for viewing and editing the raw data of files"
 license="(LGPL-2.1-only OR LGPL-3.0-only) AND (GPL-2.0-only OR GPL-3.0-only) AND GFDL-1.2-only"
