--- a/testing/qutebrowser/APKBUILD
+++ b/testing/qutebrowser/APKBUILD
@@ -4,7 +4,7 @@ pkgver=1.8.3
 pkgrel=0
 pkgdesc="A keyboard-driven, vim-like browser based on PyQT5"
 url="https://qutebrowser.org/"
-arch="noarch !s390x !ppc64le !x86" # limited by qt5-qtwebengine
+arch="noarch !s390x !ppc64le !armhf" # Blocked on s390x and ppc64le by qt5-qtwebengine, on armhf by py3-qt5 -> qt5-qtdeclarative-dev
 license="GPL-3.0-only"
 depends="
 	py3-attrs py3-jinja2 py3-pygments py3-pypeg2 py3-qt5 py3-yaml qt5-qtbase
