community/wireshark: allow users in wireshark group to use dumpcap
Currently wireshark needs to be either run as root or users need to
manually configure one of the mechanisms from the wireshark wiki [0].
Allowing users of a specific group to capture packets seems to be a
sensible default for me.

[0]: https://wiki.wireshark.org/CaptureSetup/CapturePrivileges#Limiting_capture_permission_to_only_one_group

--- a/community/wireshark/APKBUILD
+++ b/community/wireshark/APKBUILD
@@ -4,17 +4,19 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=wireshark
 pkgver=3.0.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A network protocol analyzer"
 url="https://www.wireshark.org"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="bash bison c-ares-dev cmake flex glib glib-dev gnutls-dev
-	libcap-dev libgcrypt-dev libnl3-dev libpcap-dev
+	libcap-dev libgcrypt-dev libnl3-dev libcap libpcap-dev
 	lua5.2-dev pcre-dev perl-dev portaudio-dev qt5-qtbase-dev
 	qt5-qtmultimedia-dev qt5-qtsvg-dev qt5-qttools-dev"
 checkdepends="py3-pytest py3-pytest-xdist"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-common tshark"
+pkggroups="wireshark"
+install="$pkgname.pre-install $pkgname.pre-upgrade"
 # Use mirror in the meantime
 # source="https://www.wireshark.org/download/src/wireshark-$pkgver.tar.xz
 source="https://1.as.dl.wireshark.org/src/wireshark-$pkgver.tar.xz
@@ -220,6 +222,12 @@ check() {
 
 package() {
 	make -j1 DESTDIR="$pkgdir" install
+
+	# Allow users in the wireshark group to capture packages
+	# See: https://wiki.wireshark.org/CaptureSetup/CapturePrivileges#Limiting_capture_permission_to_only_one_group
+	chmod 0750 "$pkgdir"/usr/bin/dumpcap
+	chown root:wireshark "$pkgdir"/usr/bin/dumpcap
+	setcap cap_net_raw,cap_net_admin+eip "$pkgdir"/usr/bin/dumpcap
 }
 
 common() {
