--- a/community/wireshark/APKBUILD
+++ b/community/wireshark/APKBUILD
@@ -16,7 +16,7 @@ makedepends="bash bison c-ares-dev cmake flex glib glib-dev gnutls-dev
 checkdepends="py3-pytest py3-pytest-xdist"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-common tshark"
 pkggroups="wireshark"
-install="$pkgname.pre-install $pkgname.pre-upgrade"
+install="$pkgname.pre-install $pkgname.pre-upgrade $pkgname.post-install"
 # Use mirror in the meantime
 # source="https://www.wireshark.org/download/src/wireshark-$pkgver.tar.xz
 source="https://1.as.dl.wireshark.org/src/wireshark-$pkgver.tar.xz
