--- a/main/clamav/APKBUILD
+++ b/main/clamav/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=clamav
-pkgver=0.101.4
+pkgver=0.101.5
 pkgrel=0
 pkgusers="clamav"
 pkggroups="clamav"
@@ -36,6 +36,8 @@ source="https://www.clamav.net/downloads/production/$pkgname-$pkgver.tar.gz
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   0.100.5-r0:
+#     - CVE-2019-15961
 #   0.100.3-r0:
 #     - CVE-2019-1787
 #     - CVE-2019-1788
@@ -88,7 +90,7 @@ build() {
 		--enable-bigstack \
 		--with-pcre \
 		--enable-milter
-	make
+	make LDFLAGS="-lfts"
 }
 
 check() {
@@ -240,7 +242,7 @@ milter() {
 		"$subpkgdir"/etc/clamav/clamav-milter.conf
 }
 
-sha512sums="fae914a95b674fa6bdea044abec702401146590ca0aaaea1245deb1c4770641a794f60ff7b448b24d8c1923150cb7ba230848974837257c3a8ab20ea1e2f86d3  clamav-0.101.4.tar.gz
+sha512sums="14e2f79573ed8bf885e4ba47ac22e713060d46e1704467f6c83c3a3abf37ffbd3a1b20bb0de87059a8df6faca9c10efe0f01cdfee54edb62ad863679013e1966  clamav-0.101.5.tar.gz
 ed81be79bf9a25eec071312252121cc76c96838407377b75077bf94922055f1de99f327982ac4dccd5be85003baa95385e5d002fabab32bb851bb30178475edd  clamd.initd
 59c561b3dcb0b616b647cd8e4ebc46a2cc5e7144c8c7ea0054cc1c3021d1da8f67e4dad5c083c3fe712ed887aaabfca91b538f4759537e7c4c9ab71ba4fd5794  clamd.confd
 00daed8afb67a6e4a29893340246c8840cce970dd9103d26557ecdd26ef60b12551d2291c214fc657faaaa339484052079347411b0cad65e3a33ece56d57cf16  freshclam.initd
